Update opensearch cm and secrets

--- a/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/security_configs/config.yml
+++ b/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/security_configs/config.yml
@@ -24,3 +24,16 @@ config:
           challenge: true
         authentication_backend:
           type: intern
+      openid_auth_domain:
+        http_enabled: true
+        transport_enabled: true
+        order: 1
+        http_authenticator:
+          type: openid
+          challenge: false
+          config:
+            subject_key: name
+            roles_key: groups
+            openid_connect_url: https://auth-staging.pingone.com/b9b5b6f5-3440-4adc-8dc4-46593f1263f7/as/.well-known/openid-configuration
+        authentication_backend:
+          type: noop
