--- a/k8s-configs/cluster-tools/base/logging/elastic-stack/kustomization.yaml
+++ b/k8s-configs/cluster-tools/base/logging/elastic-stack/kustomization.yaml
@@ -8,7 +8,7 @@ resources:
 - logstash
 - namespace.yaml
 - opensearch
-- os-dashboards
+#- os-dashboards
 
 configMapGenerator:
 - name: elk-environment-variables
