--- a/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/kustomization.yaml
+++ b/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/kustomization.yaml
@@ -4,15 +4,15 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 namespace: elastic-stack-logging
 
 resources:
-- configs
+#- configs
 - security_configs
-- pdb.yaml
-- rbac.yaml
-- service.yaml
-- sts.yaml
+#- pdb.yaml
+#- rbac.yaml
+#- service.yaml
+#- sts.yaml
 - index-templates
 - storageclass.yaml
-- certs.yaml
+#- certs.yaml
 - ism-policies
 - alerts
 - notifications
