--- a/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/security_configs/audit.yml
+++ b/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/security_configs/audit.yml
@@ -26,7 +26,7 @@ config:
     # Users to be excluded from auditing. Wildcard patterns are supported. Eg:
     # ignore_users: ["test-user", "employee-*"]
     ignore_users:
-      - kibanaserver
+      - dashboards
       - logstash
 
     # Requests to be excluded from auditing. Wildcard patterns are supported. Eg:
@@ -68,7 +68,7 @@ config:
     # List of users to ignore for read events. Wildcard patterns are supported. Eg:
     # read_ignore_users: ["test-user", "employee-*"]
     read_ignore_users:
-      - kibanaserver
+      - dashboards
       - logstash
 
     # Log only metadata of the document for write events
@@ -84,5 +84,5 @@ config:
     # List of users to ignore for write events. Wildcard patterns are supported. Eg:
     # write_ignore_users: ["test-user", "employee-*"]
     write_ignore_users:
-      - kibanaserver
+      - dashboards
       - logstash
