--- a/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/security_configs/internal_users.yml
+++ b/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/security_configs/internal_users.yml
@@ -3,17 +3,15 @@ _meta:
   config_version: 2
 
 # Define your internal users here
-
-
 admin:
-  hash: "$2y$12$x0W/bb.rCExntDszzTQMGO46BjhcabBlY/j44cLQlQgpNCPImb00m"
+  hash: "$2a$12$jvk/Z006eLKBifWGrFogHO2izdrVkRaQOfeVXobWwpI.C4/HsV0G2"
   reserved: true
   backend_roles:
   - "admin"
   description: "Admin user"
 
-kibanaserver:
-  hash: "$2y$12$KLiCHmtIiXpojpsriqFBBedlHyuOB6QSWFK932S1DELwzKdZ0ioAq"
+dashboards:
+  hash: "$2y$12$GpoSF/qU9VWZJfB.Rd12dOuRjdNtTdXxP8rs7r2XEVQSVVUxeE1uO"
   reserved: true
   description: "OpenSearch Dashboards user"
 
