--- a/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/security_configs/roles_mapping.yml
+++ b/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/security_configs/roles_mapping.yml
@@ -74,7 +74,7 @@ kibana_user:
 kibana_server:
   reserved: true
   users:
-  - "kibanaserver"
+  - "dashboards"
 
 index_migration:
   reserved: true
