--- a/k8s-configs/cluster-tools/base/logging/elastic-stack/logstash/logstash.yaml
+++ b/k8s-configs/cluster-tools/base/logging/elastic-stack/logstash/logstash.yaml
@@ -233,8 +233,8 @@ spec:
             - name: logstash-gp3
               mountPath: /usr/share/logstash/data/queue
               readOnly: false
-            - name: os-certs
-              mountPath: /usr/share/logstash/certs
+#            - name: os-certs
+#              mountPath: /usr/share/logstash/certs
         # Sidecar enrichment container which updates Logstash dictionaries
         - name: enrichment-sidecar
           securityContext:
@@ -301,9 +301,9 @@ spec:
             name: enrichment-cache
         - name: enrichment-cache-files
           emptyDir: {}
-        - name: os-certs
-          secret:
-            secretName: opensearch-cert
+#        - name: os-certs
+#          secret:
+#            secretName: opensearch-cert
   serviceName: logstash-elastic
   volumeClaimTemplates:
     - metadata:
