--- a/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/cluster/cluster.yaml
+++ b/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/cluster/cluster.yaml
@@ -19,13 +19,13 @@ spec:
     version: 2.8.0
     pluginsList:
       - "repository-s3"
-      - "https://github.com/aiven/prometheus-exporter-plugin-for-opensearch/releases/download/2.9.0.0/prometheus-exporter-2.9.0.0.zip"
+      - "https://github.com/aiven/prometheus-exporter-plugin-for-opensearch/releases/download/2.8.0.0/prometheus-exporter-2.8.0.0.zip"
     image: public.ecr.aws/opensearchproject/opensearch:2.8.0
     additionalConfig:
       cluster.max_shards_per_node: "10000"
       node.search.cache.size: "500mb"
       node.attr.temp: "hot"
-      index.unassigned.node_left.delayed_timeout: "20m"
+#      index.unassigned.node_left.delayed_timeout: "20m"
   dashboards:
     enable: true
     opensearchCredentialsSecret:
