disable index template

--- a/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/index-templates/kustomization.yaml
+++ b/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/index-templates/kustomization.yaml
@@ -42,4 +42,4 @@ configMapGenerator:
       - pf-requests.json
       - pf-server.json
       - pf-transaction.json
-      - general.json
+#      - general.json
