--- a/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/security_configs/roles.yml
+++ b/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/security_configs/roles.yml
@@ -308,3 +308,21 @@ read_prometheus:
       - "*"
       allowed_actions:
       - "indices:monitor/stats"
+
+customer_role:
+  reserved: false
+  hidden: false
+  cluster_permissions:
+  - "cluster_composite_ops_ro"
+  - "kibana_all_read"
+  index_permissions:
+  - index_patterns:
+    - "*"
+    allowed_actions:
+    - "read"
+    - "kibana_all_read"
+  tenant_permissions:
+  - tenant_patterns:
+    - "global_tenant"
+    allowed_actions:
+    - "kibana_all_read"
