--- a/k8s-configs/cluster-tools/base/logging/elastic-stack/os-dashboards/kustomization.yaml
+++ b/k8s-configs/cluster-tools/base/logging/elastic-stack/os-dashboards/kustomization.yaml
@@ -3,9 +3,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 
 namespace: elastic-stack-logging
 
-resources:
-  - configmap.yaml
-  - deployment.yaml
-  - rbac.yaml
-  - service.yaml
-  - secret.yaml
+#resources:
+#  - configmap.yaml
+#  - deployment.yaml
+#  - rbac.yaml
+#  - service.yaml
+#  - secret.yaml
