--- a/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/bootstrap.yaml
+++ b/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/bootstrap.yaml
@@ -53,7 +53,7 @@ spec:
           - name: ISM_PATH
             value: "/usr/share/opensearch/data/ism-policies"
           - name: OSD_URL
-            value: "http://opensearch-dashboards:5601"
+            value: "http://opensearch-cluster-dashboards:5601"
           - name: DASHBOARDS_PATH
             value: "/usr/share/opensearch/data/dashboards"
         volumeMounts:
