--- a/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/kustomization.yaml
+++ b/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/kustomization.yaml
@@ -6,13 +6,9 @@ namespace: elastic-stack-logging
 resources:
 - configs
 - security_configs
-#- pdb.yaml
-#- rbac.yaml
-#- service.yaml
-#- sts.yaml
+- service.yaml
 - index-templates
 - storageclass.yaml
-#- certs.yaml
 - ism-policies
 - alerts
 - notifications
