--- a/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/cluster.yaml
+++ b/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/cluster.yaml
@@ -44,6 +44,9 @@ spec:
       replicas: 3
       diskSize: "8Gi"
       jvm: -Xmx3000M -Xms3000M
+      pdb:
+        enable: true
+        maxUnavailable: 1
       additionalConfig:
         node.attr.temp: "hot"
       affinity:
@@ -87,6 +90,9 @@ spec:
       replicas: 3
       diskSize: "140Gi"
       jvm: -Xmx3g -Xms3g
+      pdb:
+        enable: true
+        maxUnavailable: 1
       additionalConfig:
         node.attr.temp: "hot"
       affinity:
