--- a/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/security_configs/kustomization.yaml
+++ b/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/security_configs/kustomization.yaml
@@ -7,17 +7,17 @@ resources:
   - os-admin-secret.yaml
   - os-dashboard-secret.yaml
 
+# The secret values for config.yml and roles_mapping.yml are managed by the p1as-oauth init container, and
+# can be found in the p14c-integration image.
 secretGenerator:
   - name: opensearch-securityconfig
     type: Opaque
     files:
       - action_groups.yml
       - audit.yml
-      - config.yml
       - internal_users.yml
       - nodes_dn.yml
       - roles.yml
-      - roles_mapping.yml
       - tenants.yml
       - allowlist.yml
 generatorOptions:
