Install operator separately

--- a/k8s-configs/cluster-tools/test/logging/kustomization.yaml
+++ b/k8s-configs/cluster-tools/test/logging/kustomization.yaml
@@ -5,6 +5,6 @@ namespace: elastic-stack-logging
 
 resources:
 - ../../base/logging/
-
-patchesStrategicMerge:
-- elastic-stack/opensearch/os-limits.yaml
+#
+#patchesStrategicMerge:
+#- elastic-stack/opensearch/os-limits.yaml
