--- a/code-gen/templates/common/base/custom-patches-sample.yaml
+++ b/code-gen/templates/common/base/custom-patches-sample.yaml
@@ -143,8 +143,14 @@ spec:
             - name: PIPELINE_WORKERS
               value: "2"
 ---
+
 ################################################
 #                OpenSearch
+# WARNING: Do not change roles for the nodePools
+# WARNING: Before applying patches to the Opensearch verify replicas count.
+# Use kubectl get pods -n elastic-stack-logging | grep opensearch-cluster
+# If opensearch-cluster-hot and opensearch-cluster-hot more than 3 - adjust replicas
+# count in patches according to the existence replicas.
 ################################################
 
 # Increase CPU resources
@@ -155,17 +161,28 @@ metadata:
 spec:
   nodePools:
     - component: hot
+      replicas: 3 # This should be equal to the existing replicas
       resources:
         requests:
           cpu: "3"
         limits:
           cpu: "6"
+      roles: # Do not change roles
+        - "cluster_manager"
+        - "data"
+        - "ingest"
+        - "remote_cluster_client"
+        - "search"
     - component: warm
+      replicas: 3 # This should be equal to the existing replicas
       resources:
         requests:
           cpu: "2"
         limits:
           cpu: "4"
+      roles: # Do not change roles
+        - "remote_cluster_client"
+        - "data"
 ---
 # Increase Memory Resources
 apiVersion: opensearch.opster.io/v1
@@ -176,20 +193,35 @@ spec:
   nodePools:
     - component: hot
       jvm: -Xmx5g -Xms5g
+      replicas: 3 # This should be equal to the existing replicas
       resources:
         requests:
           memory: 6Gi
         limits:
           memory: 6Gi
+      roles: # Do not change roles
+        - "cluster_manager"
+        - "data"
+        - "ingest"
+        - "remote_cluster_client"
+        - "search"
     - component: warm
+      replicas: 3 # This should be equal to the existing replicas
       jvm: -Xmx5g -Xms5g
       resources:
         requests:
           memory: 6Gi
         limits:
           memory: 6Gi
----
+      roles: # Do not change roles
+        - "remote_cluster_client"
+        - "data"
 
+################################################
+#                End Opensearch patches
+# Please verify replicas and roles as described in the Warning before OS patches.
+################################################
+---
 ################################################
 #                PingDirectory
 ################################################
