--- a/k8s-configs/cluster-tools/test/logging/kustomization.yaml
+++ b/k8s-configs/cluster-tools/test/logging/kustomization.yaml
@@ -6,22 +6,5 @@ namespace: elastic-stack-logging
 resources:
 - ../../base/logging/
 
-patches:
-  - target:
-      kind: OpenSearchCluster
-      name: opensearch-cluster
-      group: opensearch.opster.io
-      version: v1
-    patch: |-
-      - op: replace
-        path: /spec/nodePools/0/resources/limits/memory
-        value: 8Gi
-      - op: replace
-        path: /spec/nodePools/0/resources/limits/cpu
-        value: "6"
-      - op: replace
-        path: /spec/nodePools/0/resources/requests/memory
-        value: 6Gi
-      - op: replace
-        path: /spec/nodePools/0/resources/requests/cpu
-        value: "2"
+patchesStrategicMerge:
+- elastic-stack/opensearch/os-limits.yaml
