--- a/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/cluster.yaml
+++ b/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/cluster.yaml
@@ -15,7 +15,7 @@ spec:
       adminCredentialsSecret:
         name: opensearch-admin-credentials # Name of a secret that contains username/password for admin access
   general:
-    serviceName: opensearch-cluster
+    serviceName: opensearch
     version: 2.8.0
     image: public.ecr.aws/r2h3l6e4/pingcloud-monitoring/opensearch/dev:v1.19-release-branch-latest
     setVMMaxMapCount: true
@@ -29,6 +29,7 @@ spec:
     opensearchCredentialsSecret:
       name: opensearch-dashboard-credentials
     replicas: 1
+    image: public.ecr.aws/r2h3l6e4/pingcloud-clustertools/opensearchproject/opensearch-dashboards:2.8.0
     resources:
       requests:
          memory: "512Mi"
