--- a/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/cluster.yaml
+++ b/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/cluster.yaml
@@ -26,6 +26,36 @@ spec:
   dashboards:
     enable: true
     version: 2.8.0
+    env:
+      - name: OPENID_CONNECT_URL
+        valueFrom:
+          secretKeyRef:
+            name: opensearch-dashboard-oidc
+            key: connect_url
+      - name: OPENID_CLIENT_ID
+        valueFrom:
+          secretKeyRef:
+            name: opensearch-dashboard-oidc
+            key: client_id
+      - name: OPENID_CLIENT_SECRET
+        valueFrom:
+          secretKeyRef:
+            name: opensearch-dashboard-oidc
+            key: client_secret
+    additionalConfig:
+      opensearch.ssl.verificationMode: "Full"
+      opensearch_security.auth.anonymous_auth_enabled: "false"
+      opensearch_security.auth.type: |
+        ["openid", "basicauth"]
+      opensearch.requestHeadersAllowlist: |
+        ["authorization", "securitytenant"]
+      opensearch_security.openid.trust_dynamic_headers: "true"
+      opensearch_security.multitenancy.enabled: "false"
+      opensearch_security.openid.connect_url: "${OPENID_CONNECT_URL}"
+      opensearch_security.openid.client_id: "${OPENID_CLIENT_ID}"
+      opensearch_security.openid.client_secret: "${OPENID_CLIENT_SECRET}"
+      opensearch_security.openid.scope: "openid profile name groups"
+      opensearch_security.auth.multiple_auth_enabled: "true"
     opensearchCredentialsSecret:
       name: opensearch-dashboard-credentials
     replicas: 1
@@ -43,7 +73,7 @@ spec:
         app.kubernetes.io/name: opensearch
         app.kubernetes.io/instance: opensearch-cluster-hot
       replicas: 3
-      diskSize: "8Gi"
+      diskSize: "50Gi"
       jvm: -Xmx3000M -Xms3000M
       pdb:
         enable: true
@@ -52,13 +82,23 @@ spec:
         node.attr.temp: "hot"
       affinity:
         podAntiAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+            - weight: 1
+              podAffinityTerm:
+                topologyKey: failure-domain.beta.kubernetes.io/zone
+                labelSelector:
+                  matchExpressions:
+                    - key: opster.io/opensearch-nodepool
+                      operator: In
+                      values:
+                        - hot
           requiredDuringSchedulingIgnoredDuringExecution:
             - labelSelector:
                 matchExpressions:
-                  - key: app.kubernetes.io/instance
+                  - key: opster.io/opensearch-nodepool
                     operator: In
                     values:
-                      - opensearch-cluster-hot
+                      - hot
               topologyKey: kubernetes.io/hostname
       persistence:
         pvc:
@@ -92,13 +132,23 @@ spec:
         node.attr.temp: "hot"
       affinity:
         podAntiAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+            - weight: 1
+              podAffinityTerm:
+                topologyKey: failure-domain.beta.kubernetes.io/zone
+                labelSelector:
+                  matchExpressions:
+                    - key: opster.io/opensearch-nodepool
+                      operator: In
+                      values:
+                        - warm
           requiredDuringSchedulingIgnoredDuringExecution:
             - labelSelector:
                 matchExpressions:
-                  - key: app.kubernetes.io/instance
+                  - key: opster.io/opensearch-nodepool
                     operator: In
                     values:
-                      - opensearch-cluster-warm
+                      - warm
               topologyKey: kubernetes.io/hostname
       persistence:
         pvc:
