--- a/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/security_configs/kustomization.yaml
+++ b/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/security_configs/kustomization.yaml
@@ -6,6 +6,7 @@ namespace: elastic-stack-logging
 resources:
   - os-admin-secret.yaml
   - os-dashboard-secret.yaml
+  - os-dashboards-oidc.yaml
 
 secretGenerator:
   - name: opensearch-securityconfig
