--- a/k8s-configs/cluster-tools/base/logging/elastic-stack/enrichment/kustomization.yaml
+++ b/k8s-configs/cluster-tools/base/logging/elastic-stack/enrichment/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
 - enrichment-resources.yaml
 - logging-bootstrap.yaml
 - p1as-bootstrap.yaml
+- p1as-oauth.yaml
 
 generatorOptions:
   disableNameSuffixHash: true
