--- a/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/security_configs/os-admin-secret.yaml
+++ b/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/security_configs/os-admin-secret.yaml
@@ -7,4 +7,4 @@ metadata:
     argocd.argoproj.io/sync-options: Prune=false
 data:
   username: YWRtaW4K
-  password: Qlg1T1lwVk16Y1o5d0R5UHJRS1o4cUJ1VQ==
+  password: T3ZSQXc3QVFJakhaSEZn
