--- a/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/security_configs/roles_mapping.yml
+++ b/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/security_configs/roles_mapping.yml
@@ -1,41 +1,91 @@
 _meta:
+  type: "rolesmapping"
   config_version: 2
-  type: rolesmapping
+
+# Define your roles mapping here
+
+opendistro_security_anonymous_role:
+  backend_roles:
+  - "opendistro_security_anonymous_backendrole"
+
+alerting_read_access:
+  backend_roles:
+  - "opendistro_security_anonymous_backendrole"
+
+anomaly_read_access:
+  backend_roles:
+  - "opendistro_security_anonymous_backendrole"
+
+notebooks_read_access:
+  backend_roles:
+  - "opendistro_security_anonymous_backendrole"
+
+observability_read_access:
+  backend_roles:
+  - "opendistro_security_anonymous_backendrole"
+
+reports_instances_read_access:
+  backend_roles:
+  - "opendistro_security_anonymous_backendrole"
+
+reports_read_access:
+  backend_roles:
+  - "opendistro_security_anonymous_backendrole"
+
+asynchronous_search_read_access:
+  backend_roles:
+  - "opendistro_security_anonymous_backendrole"
+
+ml_read_access:
+  backend_roles:
+  - "opendistro_security_anonymous_backendrole"
+
+notifications_read_access:
+  backend_roles:
+  - "opendistro_security_anonymous_backendrole"
+
+snapshot_management_read_access:
+  backend_roles:
+  - "opendistro_security_anonymous_backendrole"
+
 all_access:
-  backend_roles:
-    - admin
-  description: Maps admin to all_access
   reserved: false
-bootstrap:
-  reserved: true
-  users:
-    - bootstrap
-customer_role:
   backend_roles:
-    - os-ping
-  description: Maps admin to all_access
+  - "admin"
+  - "os-ping"
+  description: "Maps admin to all_access"
+
+logstash:
   reserved: false
-index_migration:
-  reserved: true
-  users:
-    - indexmigration
+  backend_roles:
+  - "logstash"
+
+logstash_write:
+  reserved: false
+  backend_roles:
+  - "logstash"
+
+kibana_user:
+  reserved: false
+  backend_roles:
+  - "kibanauser"
+  description: "Maps kibanauser to kibana_user"
+
 kibana_server:
   reserved: true
   users:
-    - kibanaserver
-kibana_user:
+  - "kibanaserver"
+
+index_migration:
+  reserved: true
+  users:
+  - "indexmigration"
+
+bootstrap:
+  reserved: true
+  users:
+  - "bootstrap"
+
+read_prometheus:
   backend_roles:
-    - kibanauser
-  description: Maps kibanauser to kibana_user
-  reserved: false
-logstash:
-  backend_roles:
-    - logstash
-  reserved: false
-logstash_write:
-  backend_roles:
-    - logstash
-  reserved: false
-#read_prometheus:
-#  backend_roles:
-#    - opendistro_security_anonymous_backendrole
+    - "opendistro_security_anonymous_backendrole"
