add os-operator json

--- a/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/cluster.yaml
+++ b/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/cluster.yaml
@@ -129,7 +129,7 @@ spec:
         enable: true
         maxUnavailable: 1
       additionalConfig:
-        node.attr.temp: "hot"
+        node.attr.temp: "warm"
       affinity:
         podAntiAffinity:
           preferredDuringSchedulingIgnoredDuringExecution:
