--- a/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/cluster.yaml
+++ b/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/cluster.yaml
@@ -18,19 +18,33 @@ spec:
     serviceName: opensearch
     version: 2.8.0
     image: public.ecr.aws/r2h3l6e4/pingcloud-monitoring/opensearch/dev:v1.19-release-branch-latest
-    setVMMaxMapCount: true
+    podSecurityContext:
+      runAsNonRoot: true
+      runAsUser: 1000
+      fsGroup: 1000
+    securityContext:
+      allowPrivilegeEscalation: false
+      privileged: false
+      capabilities:
+        drop:
+        - ALL
     additionalConfig:
       node.search.cache.size: 500m
       cluster.max_shards_per_node: "10000"
       prometheus.indices: "false"
-      plugins:
-        security:
-          audit.type: internal_opensearch
-          enable_snapshot_restore_privilege: "true"
-          check_snapshot_restore_write_privileges: "true"
   dashboards:
     enable: true
     version: 2.8.0
+    podSecurityContext:
+      runAsNonRoot: true
+      runAsUser: 1000
+      fsGroup: 1000
+    securityContext:
+      allowPrivilegeEscalation: false
+      privileged: false
+      capabilities:
+        drop:
+        - ALL
 #    env:
 #      - name: OPENID_CONNECT_URL
 #        valueFrom:
