--- a/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/security_configs/kustomization.yaml
+++ b/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/security_configs/kustomization.yaml
@@ -6,6 +6,7 @@ namespace: elastic-stack-logging
 resources:
   - os-admin-secret.yaml
   - os-dashboard-secret.yaml
+  - os-dash-oidc.yaml
 
 # The secret values for config.yml and roles_mapping.yml are managed by the p1as-oauth init container, and
 # can be found in the p14c-integration image.
