--- a/k8s-configs/ping-cloud/base/pingaccess/admin/aws/periodic-backup.yaml
+++ b/k8s-configs/ping-cloud/base/pingaccess/admin/aws/periodic-backup.yaml
@@ -7,8 +7,13 @@ data:
     #!/bin/sh
 
     # Install kubectl
-    curl -sS https://storage.googleapis.com/kubernetes-release/release/"${KUBECTL_VERSION}"/bin/linux/amd64/kubectl \
-    -o /tmp/kubectl
+    if [[ "`uname -m`" == "aarch64" ]] ; then
+        curl -sS https://storage.googleapis.com/kubernetes-release/release/"${KUBECTL_VERSION}"/bin/linux/arm64/kubectl \
+        -o /tmp/kubectl
+    else
+        curl -sS https://storage.googleapis.com/kubernetes-release/release/"${KUBECTL_VERSION}"/bin/linux/amd64/kubectl \
+        -o /tmp/kubectl
+    fi
 
     chmod +x /tmp/kubectl
 
@@ -18,7 +23,7 @@ data:
     LOG_FILE=/tmp/upload.log
 
     echo "Uploading pingaccess backup data on server ${SERVER}"
-    /tmp/kubectl exec "${SERVER}" -- sh -c \
+    /tmp/kubectl exec "${SERVER}" -c pingaccess-admin -- sh -c \
             "test -x ${SCRIPT} && \
             ${SCRIPT}"> "${LOG_FILE}"
 
