--- a/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/cluster.yaml
+++ b/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/cluster.yaml
@@ -16,6 +16,7 @@ spec:
         name: opensearch-admin-credentials # Name of a secret that contains username/password for admin access
   general:
     serviceName: opensearch
+    serviceAccount: opensearch
     version: 2.8.0
     image: public.ecr.aws/r2h3l6e4/pingcloud-monitoring/opensearch/dev:v1.19-release-branch-latest
     podSecurityContext:
