--- a/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/security_configs/kustomization.yaml
+++ b/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/security_configs/kustomization.yaml
@@ -14,11 +14,12 @@ secretGenerator:
     files:
       - action_groups.yml
       - audit.yml
-      - internal_users.yml
       - nodes_dn.yml
       - roles.yml
       - tenants.yml
       - allowlist.yml
+      - internal_users.yml
+      - roles_mapping.yml
 generatorOptions:
   disableNameSuffixHash: true
   annotations:
