--- a/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/security_configs/internal_users.yml
+++ b/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/security_configs/internal_users.yml
@@ -1,25 +1,1 @@
-_meta:
-  type: "internalusers"
-  config_version: 2
-
-kibanaserver:
-  hash: "$2a$12$juEkCORqAAsHzrb62bGjiubmjpRCJXqb9WeMU1QSB53Xu7O8Ie18K"
-  reserved: true
-  description: "OpenSearch Dashboards user"
-
-logstash:
-  hash: "$2y$12$eTCIRWius.Lix5/5zwJwHOJCqILQmaWDRx6fn3IDR54K59snwlURa"
-  reserved: true
-  backend_roles:
-  - "logstash"
-  description: "Logstash user"
-
-indexmigration:
-  hash: "$2y$12$nnNxuzpFcBlpO/FesnUA7O8oZRFF.zBZaBpKKk0zeokYOzq.Y4plu"
-  reserved: true
-  description: "Index migration user"
-
-bootstrap:
-  hash: "$2y$12$rKbj1eVYptD9uw5B7COX4uOKffCoTLaDwZftW8VKVwZmmT4mJRWsy"
-  reserved: true
-  description: "Bootstrap user"
+# ping-cloud-docker/pingcloud-services/p14c-integration/src/templates/opensearch/internal_users.yml
