--- a/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch-operator/opensearch-operator-controller-manager-deployment.yaml
+++ b/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch-operator/opensearch-operator-controller-manager-deployment.yaml
@@ -17,6 +17,35 @@ spec:
         control-plane: controller-manager
     spec:
       initContainers:
+        # Pull SSM values for PingOne SSO
+        - name: p1as-bootstrap
+          securityContext:
+            allowPrivilegeEscalation: false
+            runAsGroup: 9999
+            runAsNonRoot: true
+            runAsUser: 9031
+          image: public.ecr.aws/r2h3l6e4/pingcloud-services/bootstrap/dev:v1.19-release-branch-latest
+          imagePullPolicy: Always
+          env:
+            - name: NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
+          envFrom:
+            - configMapRef:
+                name: p1as-bootstrap
+          volumeMounts:
+            - mountPath: /app/config/app_config.yaml
+              name: p1as-bootstrap-resources
+              readOnly: true
+              subPath: p1as-bootstrap-resources.yaml
+          resources:
+            requests:
+              memory: "256Mi"
+              cpu: "300m"
+            limits:
+              memory: "512Mi"
+              cpu: "500m"
         # Set up PingOne SSO
         - name: p1as-oauth
           image: 705370621539.dkr.ecr.us-west-2.amazonaws.com/pingcloud-services/p14c-integration:PDO-6287-osd-sso
@@ -45,6 +74,10 @@ spec:
             - /bin/sh
             - -c
             - python3 -u /app/oauth_client_services_controller.py --app opensearch
+      volumes:
+        - name: p1as-bootstrap-resources
+          configMap:
+            name: p1as-bootstrap-resources
       containers:
       - args:
         - --secure-listen-address=0.0.0.0:8443
