--- a/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/bootstrap.yaml
+++ b/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/bootstrap.yaml
@@ -141,14 +141,14 @@ spec:
         - name: os-alerts-pf
           configMap:
             name: os-alerts-pf
----
-apiVersion: v1
-kind: Secret
-metadata:
-  name: os-bootstrap-creds
-  annotations:
-    sealedsecrets.bitnami.com/managed: "true"
-    argocd.argoproj.io/sync-options: Prune=false
-data:
-  username: Ym9vdHN0cmFw
-  password: eGFSYWUxeGFlbmdhaG5pZTBpZURvbzdub2htYWlyb2o=
+#---
+#apiVersion: v1
+#kind: Secret
+#metadata:
+#  name: os-bootstrap-creds
+#  annotations:
+#    sealedsecrets.bitnami.com/managed: "true"
+#    argocd.argoproj.io/sync-options: Prune=false
+#data:
+#  username: Ym9vdHN0cmFw
+#  password: eGFSYWUxeGFlbmdhaG5pZTBpZURvbzdub2htYWlyb2o=
