--- a/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/security_configs/kustomization.yaml
+++ b/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/security_configs/kustomization.yaml
@@ -2,9 +2,9 @@ kind: Kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 
 namespace: elastic-stack-logging
-
-resources:
-  - os-dashboard-secret.yaml
+#
+#resources:
+#  - os-dashboard-secret.yaml
 
 # The secret values for config.yml and roles_mapping.yml are managed by the p1as-oauth init container, and
 # can be found in the p14c-integration image.
