--- a/code-gen/templates/common/base/custom-patches-sample.yaml
+++ b/code-gen/templates/common/base/custom-patches-sample.yaml
@@ -167,9 +167,6 @@ spec:
           cpu: "2"
         limits:
           cpu: "4"
-      roles: # Do not change roles
-        - "remote_cluster_client"
-        - "data"
 ---
 # Increase Memory Resources
 apiVersion: opensearch.opster.io/v1
@@ -193,9 +190,21 @@ spec:
         limits:
           memory: 6Gi
 
+---
+# Scale opensearch replicas
+apiVersion: opensearch.opster.io/v1
+kind: OpenSearchCluster
+metadata:
+  name: opensearch-cluster
+spec:
+  nodePools:
+    - component: hot
+      replicas: 5 # Scale down is not supported
+    - component: warm
+      replicas: 3
+
 ################################################
-#                End Opensearch patches
-# Please verify replicas and roles as described in the Warning before OS patches.
+#                End Opensearch patches.
 ################################################
 ---
 ################################################
