--- a/k8s-configs/cluster-tools/base/logging/elastic-stack/logstash/logstash_pipelines/main/07-pf-filters.conf
+++ b/k8s-configs/cluster-tools/base/logging/elastic-stack/logstash/logstash_pipelines/main/07-pf-filters.conf
@@ -183,7 +183,7 @@ filter {
                     opensearch {
                         index => "pf-audit-read"
                         query_template => "/etc/logstash/templates/6hr-1200km-template.json"
-                        hosts       => ["opensearch.elastic-stack-logging.svc.cluster.local:9200"]
+                        hosts       => ["opensearch-ingest.elastic-stack-logging.svc.cluster.local:9200"]
                         user => "${OS_USER}"
                         password => "${OS_PASSWORD}"
                         ssl         => true
