--- a/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/bootstrap.yaml
+++ b/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/bootstrap.yaml
@@ -29,11 +29,13 @@ spec:
               secretKeyRef:
                 key: username
                 name: os-bootstrap-creds
+                optional: true
           - name: BOOTSTRAP_PASS
             valueFrom:
               secretKeyRef:
                 key: password
                 name: os-bootstrap-creds
+                optional: true
           - name: TENANT_DOMAIN
             valueFrom:
               configMapKeyRef:
