--- a/code-gen/templates/customer-hub/region/kustomization.yaml
+++ b/code-gen/templates/customer-hub/region/kustomization.yaml
@@ -43,6 +43,12 @@ configMapGenerator:
     - ../base/env_vars
     - env_vars
 
+- name: p1as-bootstrap
+  behavior: merge
+  envs:
+    - ../base/env_vars
+    - env_vars
+
 # PingCentral
 # Create the config maps that hold the variable for triggering updates of PingCentral
 - name: pingcentral-last-update-config
